--- a/AppleShopWPF/Pages/AdminPage.xaml
+++ b/AppleShopWPF/Pages/AdminPage.xaml
@@ -199,6 +199,7 @@
 
                                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,12,0,0">
                                             <Button Style="{StaticResource btn_style_buy}" Content="Edit" Width="180" Height="48" FontSize="18" Click="EditProduct_Click" Background="Black" Foreground="White"/>
+                                            <Button Style="{StaticResource btn_style_buy}" Content="Delete" Width="140" Height="48" FontSize="18" Margin="8,0,0,0" Click="DeleteProduct_Click" Background="#FFB14F4F" Foreground="White"/>
                                         </StackPanel>
                                     </StackPanel>
                                 </Border>
@@ -302,6 +303,7 @@
 
                                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,12,0,0">
                                             <Button Style="{StaticResource btn_style_buy}" Content="Edit" Width="180" Height="48" FontSize="18" Click="EditCategory_Click" Background="Black" Foreground="White"/>
+                                            <Button Style="{StaticResource btn_style_buy}" Content="Delete" Width="140" Height="48" FontSize="18" Margin="8,0,0,0" Click="DeleteCategory_Click" Background="#FFB14F4F" Foreground="White"/>
                                         </StackPanel>
                                     </StackPanel>
                                 </Border>
